force-app/main/default/objects/Application_Pending_Tracker__c/Application_Pending_Tracker__c.object-meta.xml
<CustomObject>
    <label>Application Pending Tracker</label>
    <nameField>
        <label>Application Pending Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Pending Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>