force-app/main/default/objects/Application_Pending_Tracker__c/fields/Application_Pending__c.field-meta.xml
<CustomField>
    <fullName>Application_Pending__c</fullName>
    <label>Application Pending</label>
    <length>50</length>
    <type>Text</type>
</CustomField>