force-app/main/default/objects/Application_Pending_Tracker__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Application Pending Trackers</relationshipLabel>
    <relationshipName>Application_Pending_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>