force-app/main/default/objects/Application_Pending_Tracker__c/fields/Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Page_Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>