force-app/main/default/objects/Application_Pending_Tracker__c/fields/Previous_Application_Pending__c.field-meta.xml
<CustomField>
    <fullName>Previous_Application_Pending__c</fullName>
    <label>Previous Application Pending</label>
    <length>50</length>
    <type>Text</type>
</CustomField>